infer/tests/codetoanalyze/objc/errors/category_procdesc/main.dot
digraph iCFG {
18 [label="18:  DeclStmt \n   n$2=_fun___objc_alloc_no_fail(sizeof(class EOCPerson ):unsigned long ) [line 13]\n  n$3=_fun_NSObject_init(n$2:class EOCPerson *) virtual [line 13]\n  *&person:class EOCPerson *=n$3 [line 13]\n  REMOVE_TEMPS(n$2,n$3); [line 13]\n " shape="box"]
	

	 18 -> 17 ;
17 [label="17:  Message Call: performDaysWork \n   n$1=*&person:class EOCPerson * [line 14]\n  _fun_EOCPerson_performDaysWork(n$1:class EOCPerson *) virtual [line 14]\n  REMOVE_TEMPS(n$1); [line 14]\n  NULLIFY(&person,false); [line 14]\n " shape="box"]
	

	 17 -> 16 ;
16 [label="16:  DeclStmt \n   n$0=_fun_malloc_no_fail(sizeof(int ):int ) [line 15]\n  *&x:int *=n$0 [line 15]\n  REMOVE_TEMPS(n$0); [line 15]\n  NULLIFY(&x,false); [line 15]\n " shape="box"]
	

	 16 -> 15 ;
15 [label="15:  Return Stmt \n   *&return:int =0 [line 16]\n  APPLY_ABSTRACTION; [line 16]\n " shape="box"]
	

	 15 -> 14 ;
14 [label="14: Exit main \n  " color=yellow style=filled]
	

13 [label="13: Start main\nFormals: \nLocals:  x:int * person:class EOCPerson * \n   DECLARE_LOCALS(&return,&x,&person); [line 12]\n  NULLIFY(&person,false); [line 12]\n  NULLIFY(&x,false); [line 12]\n " color=yellow style=filled]
	

	 13 -> 18 ;
12 [label="12: Exit NSDiscardableContent_frontendChecks \n  " color=yellow style=filled]
	

11 [label="11: Start NSDiscardableContent_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 11 -> 12 ;
10 [label="10: Exit NSSecureCoding_frontendChecks \n  " color=yellow style=filled]
	

9 [label="9: Start NSSecureCoding_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 9 -> 10 ;
8 [label="8: Exit NSCoding_frontendChecks \n  " color=yellow style=filled]
	

7 [label="7: Start NSCoding_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 7 -> 8 ;
6 [label="6: Exit NSMutableCopying_frontendChecks \n  " color=yellow style=filled]
	

5 [label="5: Start NSMutableCopying_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 5 -> 6 ;
4 [label="4: Exit NSCopying_frontendChecks \n  " color=yellow style=filled]
	

3 [label="3: Start NSCopying_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 3 -> 4 ;
2 [label="2: Exit NSObject_frontendChecks \n  " color=yellow style=filled]
	

1 [label="1: Start NSObject_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 1 -> 2 ;
}
